[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/tanks-PNG/Weapon_Color_D/Gun_01.png" type="Texture" id=1]
[ext_resource path="res://assets/tanks-PNG/Tracks/Track_1_B.png" type="Texture" id=2]
[ext_resource path="res://assets/tanks-PNG/Tracks/Track_1_A.png" type="Texture" id=3]
[ext_resource path="res://assets/tanks-PNG/Hulls_Color_D/Hull_02.png" type="Texture" id=4]
[ext_resource path="res://Player/Player.gd" type="Script" id=5]
[ext_resource path="res://ThaleahFat.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/tanks-PNG/Effects/Explosion_A.png" type="Texture" id=7]
[ext_resource path="res://assets/tanks-PNG/Effects/Tire_Track_02.png" type="Texture" id=8]
[ext_resource path="res://Player/tracks_particle_mat.tres" type="Material" id=9]
[ext_resource path="res://assets/engine-loop-1.wav" type="AudioStream" id=10]
[ext_resource path="res://assets/cannon_fire.ogg" type="AudioStream" id=11]
[ext_resource path="res://assets/tanks-PNG/Effects/Flash_A_02.png" type="Texture" id=12]
[ext_resource path="res://assets/tanks-PNG/Effects/Flash_A_03.png" type="Texture" id=13]
[ext_resource path="res://assets/tanks-PNG/Effects/Flash_A_01.png" type="Texture" id=14]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "animate",
"speed": 10.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 14 ), ExtResource( 12 ), ExtResource( 13 ) ],
"loop": false,
"name": "fire",
"speed": 15.0
} ]

[sub_resource type="DynamicFont" id=2]
size = 4
font_data = ExtResource( 6 )

[node name="Player" type="RigidBody2D"]
z_index = 10
mass = 1000.0
gravity_scale = 0.0
angular_damp = 4.0
script = ExtResource( 5 )

[node name="Tracks" type="Node2D" parent="."]

[node name="Track-r" type="AnimatedSprite" parent="Tracks"]
position = Vector2( 0, 65 )
rotation = 1.5708
frames = SubResource( 1 )
animation = "animate"
playing = true

[node name="CPUParticles2D_r" type="Particles2D" parent="Tracks/Track-r"]
position = Vector2( 0, 65 )
amount = 4
local_coords = false
process_material = ExtResource( 9 )
texture = ExtResource( 8 )

[node name="Track-l" type="AnimatedSprite" parent="Tracks"]
position = Vector2( 0, -65 )
rotation = 1.5708
frames = SubResource( 1 )
animation = "animate"
playing = true

[node name="CPUParticles2D_l" type="Particles2D" parent="Tracks/Track-l"]
position = Vector2( 0, 65 )
amount = 4
local_coords = false
process_material = ExtResource( 9 )
texture = ExtResource( 8 )

[node name="Body" type="Node2D" parent="."]

[node name="Hull02" type="Sprite" parent="Body"]
rotation = 1.5708
texture = ExtResource( 4 )

[node name="Turret" type="Node2D" parent="."]
z_index = 12

[node name="Gun01" type="Sprite" parent="Turret"]
rotation = 1.5708
texture = ExtResource( 1 )
offset = Vector2( 0, -60 )

[node name="Muzzle" type="Position2D" parent="Turret"]
position = Vector2( 155, -0.270526 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Turret/Muzzle"]
position = Vector2( 39, 0 )
rotation = 1.5708
frames = SubResource( 3 )
animation = "fire"

[node name="Target_x" type="Position2D" parent="Turret"]
position = Vector2( 1000, 0 )

[node name="TargetPos" type="Position2D" parent="Turret/Target_x"]

[node name="Sprite" type="Sprite" parent="Turret/Target_x/TargetPos"]
texture = ExtResource( 7 )

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Turret"]

[node name="RayCast2D" type="RayCast2D" parent="Turret"]
enabled = true
cast_to = Vector2( 5000, 0 )
collision_mask = 3

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
rotation = 1.5708
polygon = PoolVector2Array( -76, -125, -31, -124, -22, -106, -24, -82, 24, -81, 25, -106, 31, -122, 75, -121, 85, -104, 83, 20, 73, 29, 73, 110, 59, 127, 30, 128, 27, 97, -25, 95, -30, 127, -58, 125, -71, 113, -71, 26, -82, 19, -83, -106 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="CanvasLayer/Control"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 2 )
text = "place holder"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
pitch_scale = 0.4
autoplay = true

[node name="Fire_round_SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
pitch_scale = 0.8
